# Universal-IFR-Extractor

./: CMakeLists.txt  README.md  main.cpp
